# VibeArch

./: .gitignore  README.md  compose.aws-local.yaml  compose.yaml  copilot-instructions.md  docker-compose.yml
.arch/: README.md  change-log.md  components.md  data-flow.md  decisions.md  drift.md  next-steps.md  risks.md  system-overview.md
.arch/.obsidian/: workspace.json
.arch/component-details/: aws-serverless-platform.md  build-runtime-tooling.md  chat-api.md  connection-manager.md  frontend-styling.md  frontend-ui.md  payload-validator.md
.github/: copilot-instructions.md
arch/: README.md  change-log.md  components.md  data-flow.md  decisions.md  drift.md  next-steps.md  risks.md  system-overview.md
arch/.obsidian/: workspace.json
arch/component-actions/: build-runtime-tooling.md  chat-api.md  connection-manager.md  frontend-styling.md  frontend-ui.md  payload-validator.md
arch/component-details/: aws-serverless-platform.md  build-runtime-tooling.md  chat-api.md  connection-manager.md  frontend-styling.md  frontend-ui.md  payload-validator.md
backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile  requirements.txt
backend/.aws-sam/: build.toml
backend/app/: main.py
backend/src/: aws_lambda.rs  lib.rs  main.rs  runtime_contract.rs  telemetry.rs
backend/tests/: auth_lifecycle.rs  aws_local_smoke.rs  runtime_parity.rs  test_auth.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  styles.css
infra/aws/: README.md  env.local.json  init-local-dynamodb.sh  (+1 more)
(+4 files in other folders)
