[package]
name = "simple-chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "json", "http1", "tokio"] }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-apigatewaymanagement = "1"
aws_lambda_events = { version = "0.16", default-features = false, features = ["apigw"] }
aws-sdk-dynamodb = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
http = "1"
lambda_http = "0.13"
lambda_runtime = "0.13"
pbkdf2 = "0.12"
query_map = "0.7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
